--- a/css/style.css
+++ b/css/style.css
@@ -3,3 +3,47 @@
     padding: 0;
     box-sizing: border-box;
 }
+
+body {
+    background: #151515 url('../img/bg.png');
+    background-size: cover;
+    font-family: "Unbounded", sans-serif;
+    font-optical-sizing: auto;
+    font-weight: 400;
+    font-style: normal;
+}
+
+.header {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    max-width: 1360px;
+    width: 95%;
+    height: 84px;
+    margin: 40px auto;
+    padding: 40px;
+    background: linear-gradient(to bottom, rgba(171, 171, 171, 0.1) 0%, rgba(147, 147, 147, 0.1) 100%);
+    backdrop-filter: blur(15px);
+    border: 1px solid rgba(128, 128, 128, 0.2);
+    border-radius: 24px;
+}
+
+.nav {
+    display: flex;
+    gap: 56px;
+}
+
+.link {
+    font-size: 18px;
+    font-weight: 500;
+    color: #E0EAFF;
+    text-decoration: none;
+    transition-property: color;
+    transition-duration: 0.2s;
+}
+
+.link:hover {
+    color: #8F8FFF;
+    transition-property: color;
+    transition-duration: 0.2s;
+}
