--- a/css/style.css
+++ b/css/style.css
@@ -130,7 +130,7 @@ body {
     line-height: 27px;
 }
 
-.btn {
+.btn-cb {
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -150,11 +150,11 @@ body {
     transition: background 0.2s;
 }
 
-.btn:hover {
+.btn-cb:hover {
     background: #A3A3FF;
 }
 
-.btn:active {
+.btn-cb:active {
     background: #6464FF;
 }
 
@@ -255,6 +255,100 @@ body {
     font-family: 'Suisse Intl', sans-serif;
     font-size: 13px;
     line-height: 27px;
+}
+
+.popup-wrapper {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    display: none;
+    justify-content: center;
+    align-items: center;
+    background-color: rgba(0, 0, 0, 0.9);
+}
+
+.popup {
+    background: rgb(29, 29, 29);
+    border-radius: 10px;
+    padding: 40px;
+    max-width: 500px;
+    width: 95%;
+    height: 528px;
+    border-radius: 24px;
+}
+
+.form-title {
+    display: flex;
+    justify-content: space-between;
+}
+
+.form-title__heading{
+    font-size: 32px;
+    color: #F0F0F0;
+    font-family: "Suisse Intl", sans-serif;
+}
+
+.close-icon {
+    width: 32px;
+    height: 32px;
+    background: url('../img/close.svg');
+}
+
+.close-icon:hover {
+    cursor: pointer;
+}
+
+.form-reg {
+    margin-top: 20px;
+    display: flex;
+    flex-direction: column;
+}
+
+.input {
+    width: 100%;
+    border: 1px solid #525151;
+    border-radius: 5px;
+    padding: 10px;
+    margin-bottom: 10px;
+    font-size: 18px;
+    height: 56px;
+    background: rgba(29, 29, 29, 0.8);
+    color: #F0F0F0;
+}
+
+.error-phone {
+    height: 25px;
+    color: #ff0000;
+}
+
+.btn-form {
+    height: 60px;
+    margin-top: 20px;
+    background-color: #8F8FFF;
+    color: white;
+    border: none;
+    border-radius: 5px;
+    padding: 10px;
+    font-size: 16px;
+    cursor: pointer;
+    transition: background-color 0.2s;
+}
+
+.btn-form:hover {
+    background-color: #6464FF;
+}
+
+.privacy-notice {
+    display: flex;
+    align-items: flex-start;
+    gap: 15px;
+    font-family: 'Suisse Intl', sans-serif;
+    font-size: 12px;
+    color: #F0F0F0;
+    margin-top: 10px;
+    text-align: left;
 }
 
 @keyframes marquee-1 {
@@ -477,4 +571,14 @@ body {
     .ticker-2 {
         margin-top: -8px;
     }
+}
+
+.iti__country-list {
+    max-width: 300px;
+    overflow-x: hidden;
+    background-color: #151515;
+}
+
+.iti__country-name {
+    display: none;
 }
